--- a/src/components/InstructorCart/Instructor.css
+++ b/src/components/InstructorCart/Instructor.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 40px;
-  width: 55%;
+  width: 70%;
   background-color: rgba(255, 255, 255, 0.6);
   border-radius: 50px;
 }
@@ -86,4 +86,45 @@
   font-size: 1.2rem;
   line-height: 1.6;
   color: #103059;
+}
+
+@media screen and (max-width: 1500px) {
+  .instructor-container {
+    width: 80%;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 850px) {
+  .instructor-header {
+    flex-direction: column;
+    padding-bottom: 20px;
+
+  }
+
+  .instructor-header h1 {
+    text-align: center;
+  }
+
+  .instructor-header p {
+    text-align: center;
+  }
+
+  .profile {
+    width: 100px;
+    height:  100px;
+  }
+
+  .instructor-details {
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .instructor-details img{
+    margin: auto;
+  }
+
+  .instructor-details h1{
+    margin-top: 30px;
+  }
 }
